2013-05-30  Tom Tromey  <tromey@redhat.com>

	* solib-aix.c (solib_aix_bfd_open): Don't use a null cleanup
	for 'cleanup'; instead use a later one.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* python/py-breakpoint.c (bppy_get_commands): Use
	explicit, unconditional return.
	* python/py-frame.c (frapy_read_var): Likewise.
	* python/python.c (gdbpy_decode_line): Likewise.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* cp-namespace.c (cp_lookup_symbol_imports_or_template): Call
	do_cleanups on all return paths.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* top.c (execute_command): Discard 'cleanup_if_error' cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* stabsread.c (read_struct_type): Call do_cleanups along
	all return paths.

2013-05-30  Maciej W. Rozycki  <macro@codesourcery.com>

	* mips-linux-tdep.c: Adjust formatting throughout.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* mipsread.c (read_alphacoff_dynamic_symtab): Call do_cleanups
	along all return paths.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* symfile.c (find_separate_debug_file): Call do_cleanups
	along all return paths.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* symtab.c (search_symbols): Introduce a null cleanup for
	'retval_chain'.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* python/py-value.c (valpy_binop): Call do_cleanups before
	exiting loop.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* python/py-prettyprint.c (print_children): Remove extra
	do_cleanups call.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* python/py-frame.c (frapy_read_var): Call do_cleanups along
	all return paths.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* python/py-breakpoint.c (bppy_get_commands): Call do_cleanups
	along all return paths.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* cli/cli-logging.c (set_logging_redirect): Unconditionally
	call do_cleanups.

2013-05-30  Tom Tromey  <tromey@redhat.com>

	* varobj.c (c_value_of_root): Call do_cleanups along all