@@ -1,5 +1,10 @@
 2013-05-30  Tom Tromey  <tromey@redhat.com>
 
+	* linux-thread-db.c (thread_db_load_search): Unconditionally
+	call do_cleanups.
+
+2013-05-30  Tom Tromey  <tromey@redhat.com>
+
 	* solib-aix.c (solib_aix_bfd_open): Don't use a null cleanup
 	for 'cleanup'; instead use a later one.
 
